# jiramatic

./: README.md  pyproject.toml
src/jiramatic/config/: jiramatic_config.py  jiramatic_paths.py
tests/config/: test_env_vars.py  test_jiramatic_paths.py
