[tool.poetry]
name = "jiramatic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jiramatic", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
rich = "^13.9.4"
tqdm = "^4.67.0"
chromadb = "^0.5.20"
langchain = "^0.3.7"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.7"
langchain-ollama = "^0.2.0"
ollama = "^0.3.3"
langchain-openai = "^0.2.9"
langgraph = "^0.2.52"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3
